<resources>
    <string name="app_name">suitmedia_test</string>
    <string name="name">Name</string>
    <string name="palindrome">Palindrome</string>
    <string name="image_profile">Image Profile</string>
    <string name="next">NEXT</string>
    <string name="check">CHECK</string>
    <string name="image_back_button">Image Back Button</string>
    <string name="second_screen">Second Screen</string>
    <string name="welcome">Welcome</string>
    <string name="selected_user_name">Selected User Name</string>
    <string name="choose_a_user">Choose a User</string>
    <string name="third_screen">Third Screen</string>
    <string name="firstname_lastname">Firstname Lastname</string>
    <string name="email_email_com">email@email.com</string>
</resources>