<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_suitmedia_test"
    tools:context=".ui.FirstScreenActivity">

    <ImageView
        android:id="@+id/img_photo"
        android:layout_width="116dp"
        android:layout_height="116dp"
        android:contentDescription="@string/image_profile"
        android:src="@drawable/ic_photo"
        android:layout_marginTop="186dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/ll_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="20dp"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@+id/img_photo">

        <EditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/field_shape"
            android:fontFamily="@font/poppins"
            android:hint="@string/name"
            android:paddingHorizontal="25dp"
            android:textSize="16sp"
            android:paddingTop="15dp"
            android:paddingBottom="10dp"
            android:textColor="#04021D"
            android:textColorHint="#59686777" />

        <EditText
            android:id="@+id/et_palindrome"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/field_shape"
            android:fontFamily="@font/poppins"
            android:hint="@string/palindrome"
            android:textSize="16sp"
            android:paddingHorizontal="25dp"
            android:paddingTop="15dp"
            android:paddingBottom="10dp"
            android:textColor="#04021D"
            android:textColorHint="#59686777" />

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_check"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:textSize="14sp"
        android:layout_marginHorizontal="20dp"
        android:fontFamily="@font/poppins"
        android:background="@drawable/button_shape"
        android:textColor="@color/white"
        android:text="@string/check"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_form" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:textSize="14sp"
        android:layout_marginHorizontal="20dp"
        android:fontFamily="@font/poppins"
        android:textColor="@color/white"
        android:background="@drawable/button_shape"
        android:text="@string/next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_check" />


</androidx.constraintlayout.widget.ConstraintLayout>